Several updates: - Swapped to Alpine Node with other dependencies for Dockerfile - Add sourcemap to webpack - Fix grunt task JS formatting issues - Improve speed of watch tasks by using no spawn - Move jQuery into CDN script tag out of bundle

--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -105,6 +105,7 @@
 		</nav>
 	</footer>
 
+	<script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
 	<script src="/javascripts/app.bundle.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/languages/scss.min.js"></script>
