--- a/web/client/stylesheets/components/_contrast.scss
+++ b/web/client/stylesheets/components/_contrast.scss
@@ -2,13 +2,11 @@
 
 @function text-contrast($n) {
   $color-brightness: round((red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000);
-  $light-color: round((red(#ffffff) * 299) + (green(#ffffff) * 587) + (blue(#ffffff) * 114) / 1000);
+  $light-color: round((red(#fff) * 299) + (green(#fff) * 587) + (blue(#fff) * 114) / 1000);
 
-  @if abs($color-brightness) < ($light-color/2){
+  @if abs($color-brightness) < ($light-color / 2) {
     @return white;
-  }
-
-  @else {
+  } @else {
     @return black;
   }
 }
