--- a/web/client/stylesheets/components/_example.scss
+++ b/web/client/stylesheets/components/_example.scss
@@ -7,8 +7,8 @@
     border-bottom: 1px solid #ddd;
     border-right: 1px solid #ddd;
     color: #333;
-    font-weight: bold;
     font-size: 10px;
+    font-weight: bold;
     left: 0;
     line-height: 1;
     margin: 0;
@@ -25,7 +25,7 @@
   &__body {
     border-bottom: 1px solid #e1e1e8;
     margin: 0;
-    padding: 20px 8px 8px 8px;
+    padding: 20px 8px 8px;
     position: relative;
   }
 
