--- a/web/client/stylesheets/main.scss
+++ b/web/client/stylesheets/main.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
-// Bootstrap
-@import 'bootstrap';
+// Experience
+@import 'experience';
 
 // Components
 @import 'components/contrast';
