Icon font: grunt task, style guide page, roadmap update, applied to breadcrumbs

--- a/src/stylesheets/components/_components-breadcrumbs.scss
+++ b/src/stylesheets/components/_components-breadcrumbs.scss
@@ -11,8 +11,8 @@
     display: inline-block;
 
     &:before {
+      @include nice-icon(angle-right);
       color: get-colour(grey);
-      content: get-glyph(greater-than);
       margin: scut-em(0 10);
     }
 
