--- a/src/stylesheets/typography/_typography.scss
+++ b/src/stylesheets/typography/_typography.scss
@@ -4,6 +4,7 @@
 
 @import 'typography-settings',
 'typography-helpers',
+'typography-icons',
 'typography-global',
 'typography-headings',
 'typography-lists',
