--- a/web/server/views/about/roadmap.njk
+++ b/web/server/views/about/roadmap.njk
@@ -63,6 +63,7 @@
 					<ul>
 						<li><s>Grunt build process</s></li>
 						<li><s>Live reload</s></li>
+						<li><a href="/style-guide/iconography"><s>Webfont (from SVGs)</s></a></li>
 						<li>Automated deployments</li>
 						<li>Alpha site</li>
 						<li>Mingle cards</li>
@@ -102,7 +103,6 @@
 					<ul>
 						<li>Transition/animation guidelines</li>
 						<li>GTM &amp; GA implementation</li>
-						<li>Webfont (from SVGs)</li>
 						<li>Copy to clipboard for code examples</li>
 						<li>JS <a href="https://flowtype.org/" target="_blank" rel="external">Flow type annotations</a></li>
 					</ul>
