--- a/web/server/views/layouts/_sidebar.njk
+++ b/web/server/views/layouts/_sidebar.njk
@@ -18,6 +18,7 @@
 							<li><a href="/style-guide/colour">Colour</a></li>
 							<li><a href="/style-guide/grid">Grid &amp; layout</a></li>
 							<li><a href="/style-guide/typography">Typography</a></li>
+							<li><a href="/style-guide/iconography">Iconography</a></li>
 						</ul>
 						<h5>
 							<a href="/components/">Components</a>
