--- a/web/server/views/style-guide/index.njk
+++ b/web/server/views/style-guide/index.njk
@@ -30,6 +30,8 @@
 
 			{{ item("Colour", "/style-guide/colour", "Colour contrast, SASS variables, colour palettes") }}
 
+			{{ item("Iconography", "/style-guide/iconography", "Icons and their usage, how to create icons") }}
+
 		</div>
 	</div>
 
