Update code examples with correct languages

--- a/web/server/views/components/alpha-beta-live.njk
+++ b/web/server/views/components/alpha-beta-live.njk
@@ -15,7 +15,7 @@
 	<section id="phase-tag">
 		<h2>Phase tag</h2>
 
-		{% example -%}
+		{% example "html" -%}
 			<p>
 				Phase tags can be used on their own like this:
 				<strong class="phase-tag phase-tag--alpha">ALPHA</strong>
@@ -48,7 +48,7 @@
 
 		<h3>Alpha</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<p class="phase-banner">
 				<span class="phase-banner__tag">
 					<strong class="phase-tag phase-tag--alpha">ALPHA</strong>
@@ -61,7 +61,7 @@
 
 		<h3>Beta</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<p class="phase-banner">
 				<span class="phase-banner__tag">
 					<strong class="phase-tag phase-tag--beta">BETA</strong>
@@ -74,7 +74,7 @@
 
 		<h3>Live</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<p class="phase-banner">
 				<span class="phase-banner__tag">
 					<strong class="phase-tag phase-tag--live">LIVE</strong>
