--- a/web/server/views/components/breadcrumbs.njk
+++ b/web/server/views/components/breadcrumbs.njk
@@ -11,7 +11,7 @@
 			<li>Use <code>class="breadcrumbs__crumb--active"</code> for current page</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<ol class="breadcrumbs">
 				<li class="breadcrumbs__crumb"><a href="#">Home</a></li>
 				<li class="breadcrumbs__crumb"><a href="#">Nice Guidance</a></li>
@@ -23,7 +23,7 @@
 
 		<p>Used to improve the web by creating a structured data markup schema supported by major search engines. On-page markup helps search engines understand the information on web pages and provide richer search results.</p>
 
-		{% example -%}
+		{% example "html" -%}
 			<ol class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
 				<li class="breadcrumbs__crumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="#">Home</a></li>
 				<li class="breadcrumbs__crumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="#">Nice Guidance</a></li>
