--- a/web/server/views/components/navigation.njk
+++ b/web/server/views/components/navigation.njk
@@ -16,7 +16,7 @@
 
 		<h2>Basic</h2>
 
-		{% example -%}
+		{% example "html" -%}
 		<nav class="nav" role="navigation">
 			<ul class="nav__tabs">
 				<li class="active"><a>One</a></li>
@@ -28,7 +28,7 @@
 
 		<h3>Justified</h3>
 
-		{% example -%}
+		{% example "html" -%}
 		<nav class="nav" role="navigation">
 			<ul class="nav__tabs nav__tabs--justified">
 				<li class="active"><a>One</a></li>
@@ -43,7 +43,7 @@
 
 		<h2>Pills</h2>
 
-		{% example -%}
+		{% example "html" -%}
 		<nav class="nav" role="navigation">
 			<ul class="nav__pills">
 				<li class="active"><a>One</a></li>
@@ -55,7 +55,7 @@
 
 		<h3>Justified</h3>
 
-		{% example -%}
+		{% example "html" -%}
 		<nav class="nav" role="navigation">
 			<ul class="nav__pills nav__pills--justified">
 				<li class="active"><a>One</a></li>
@@ -70,7 +70,7 @@
 
 		<h2>Navbar</h2>
 
-		{% example -%}
+		{% example "html" -%}
 			<nav class="navbar" role="navigation">
 				<div class="navbar__inner">
 					<a class="navbar__brand"></a>
@@ -92,7 +92,7 @@
 			<li>Use <code>class="breadcrumbs__crumb--active"</code> for current page</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<ol class="breadcrumbs">
 				<li class="breadcrumbs__crumb"><a href="#">Home</a></li>
 				<li class="breadcrumbs__crumb"><a href="#">Nice Guidance</a></li>
@@ -104,7 +104,7 @@
 
 		<p>Used to improve the web by creating a structured data markup schema supported by major search engines. On-page markup helps search engines understand the information on web pages and provide richer search results.</p>
 
-		{% example -%}
+		{% example "html" -%}
 			<ol class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
 				<li class="breadcrumbs__crumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="#">Home</a></li>
 				<li class="breadcrumbs__crumb" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a href="#">Nice Guidance</a></li>
