--- a/web/server/views/components/tabs.njk
+++ b/web/server/views/components/tabs.njk
@@ -40,7 +40,7 @@
 				content: "<h2>Tab three content</h2><p>This is the content for tab 3</p>"
 			}] %}
 
-		{% example -%}
+		{% example "html" -%}
 			{{ tabs(tabsContent) }}
 		{%- endexample %}
 	</section>
