--- a/web/server/views/style-guide/buttons.njk
+++ b/web/server/views/style-guide/buttons.njk
@@ -21,7 +21,7 @@
 			<li>Use BEM modifiers for different types</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="panel panel--dark">
 				<p><button type="button" class="btn">Default button</button></p>
 				<p><a href="#" class="btn btn--primary">Primary button</a></p>
@@ -38,7 +38,7 @@
 			<li>Size and type modifiers can be combined</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<div class="grid">
 				<div class="grid__item one-half">
 					<p><button type="button" class="btn btn--xs">XS button</button></p>
@@ -67,7 +67,7 @@
 			<li>Don't group more than 3 buttons</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<p>
 				<button type="button" class="btn">Primary action</button>
 				<button type="button" class="btn btn--secondary">Secondary action</button>
