--- a/web/server/views/style-guide/colour.njk
+++ b/web/server/views/style-guide/colour.njk
@@ -58,7 +58,7 @@
 			</li>
 		</ul>
 
-		{% source "css", "SASS colour usage example" -%}
+		{% source "scss", "SASS colour usage example" -%}
 			$colour-text: get-colour(grey, dark);
 			.something {
 				background: $colour-page;
