--- a/web/server/views/style-guide/iconography.njk
+++ b/web/server/views/style-guide/iconography.njk
@@ -83,7 +83,7 @@
 			<li>SASS mixin generated: <code>nice-icon($icon)</code></li>
 		</ul>
 
-		{% source "css", "SASS Example" -%}
+		{% source "scss", "SASS Example" -%}
 			.something {
 				@include nice-icon(search);
 			}
