--- a/web/server/views/style-guide/typography.njk
+++ b/web/server/views/style-guide/typography.njk
@@ -35,7 +35,7 @@
 			<li>don't skip headings; use classes like <code>.h1, .h2</code> etc or mixins like <code>@include h1</code> etc if you need a visual difference in heading</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<h1>How quickly daft jumping zebras vex</h1>
 			<h2>The five boxing wizards jump quickly</h2>
 			<h3>Pack my box with five dozen liquor jugs</h3>
@@ -54,7 +54,7 @@
 			<li>use 1 lead per page</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<p class="lead lead--drop-cap">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nibh augue, pulvinar nec condimentum in, vulputate a ipsum. Nulla facilisi. Sed et ex id nulla consequat bibendum nec quis nisi. Sed fermentum nisi nec velit finibus.
 			</p>
@@ -126,7 +126,7 @@
 			<li>visually distinguish external links</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<p><a href="#">A link on its own</a></p>
 			<p>This is some text with <a href="#" rel="external">an external link</a> inside it.</p>
 		{%- endexample %}
@@ -148,7 +148,7 @@
 
 		<h3>Default lists</h3>
 
-		{% example -%}
+		{% example "html" -%}
 			<p>This is an unordered list:</p>
 			<ul>
 				<li>Item 1</li>
@@ -171,7 +171,7 @@
 			<li>try to stick to a maximum of 4 items in a featured list.</li>
 		</ul>
 
-		{% example -%}
+		{% example "html" -%}
 			<p>This is a featured list:</p>
 			<ul class="list list--featured">
 				<li>Item 1</li>
