Rework plugin auto loader

--- a/web/server/views/partials/components/tabs.njk
+++ b/web/server/views/partials/components/tabs.njk
@@ -1,6 +1,6 @@
 {% macro tabs(tabs) %}
 
-	<div class="tabs" data-nice-plugin="tabs">
+	<div class="tabs" data-tabs>
 		<ul class="tabs__list" role="tablist">
 			{% for tab in tabs %}
 				<li class="tabs__tab" role="presentation">
