#16 Breadcrumbs - change structure for accessibility, update page explaining usage and add position property for schema.org

--- a/src/stylesheets/components/_components-breadcrumbs.scss
+++ b/src/stylesheets/components/_components-breadcrumbs.scss
@@ -2,6 +2,7 @@
 /// @group components
 ////
 
+// See https://www.w3.org/WAI/WCAG20/Techniques/working-examples/G65/ex3.html
 .breadcrumbs {
   list-style: none;
   margin: 0;
@@ -18,10 +19,6 @@
 
     &:first-child:before {
       display: none;
-    }
-
-    &--active {
-      color: $colour-text;
     }
 
     a {
