Apply tracker to the body

--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -25,7 +25,7 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body>
+<body data-tracker>
 
 	<!-- Google Tag Manager -->
     <noscript>
